Revert coming-soon modal

--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -14,7 +14,7 @@
       </a>
     </li>
     <li>
-      <a data-toggle="modal" data-target="#comingSoonModal"
+      <a href="{% url 'new_review' %}"
          class="list-group-item list-group-item-action pb-0
          {% if request.resolver_match.url_name == 'new_review' %}active{% endif %}">
         <h4><i class="fa fa-pencil-square-o fa-fw"></i></h4>
@@ -76,30 +76,6 @@
       DEBUG Mode
     </div>
     {% endif %}
-  </div>
-</div>
-
-<!-- under construction pop up (modal) -->
-<div class="modal fade" id="comingSoonModal" tabindex="-1" role="dialog" aria-labelledby="comingSoonModal" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <div class="container">
-          <div class="row text-center justify-content-center">
-            <h5>Sorry!</h5>
-          </div>
-          <div class="row text-center justify-content-center">
-            <p> This feature is currently under construction. <br> Thanks for your patience! </p>
-          </div>
-          <div class="row justify-content-center">
-            <button type="button" data-dismiss="modal" class="btn btn-primary">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
