Comment out review edit button

--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -23,9 +23,9 @@
                             </div>
                             <div class="ml-auto">
                             <!-- Edit functionality is TBD -->
-                            <a class="review-edit btn btn-sm btn-primary" href="#">
+                            <!-- <a class="review-edit btn btn-sm btn-primary" href="#">
                                 <i class="fas fa-pencil-alt"></i> Edit
-                            </a>
+                            </a> -->
                             </div>
                         </div>
                         {% endif %}
