--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -37,16 +37,10 @@
             <br/>
 
             <ul class="instructor-list">
-                {% for i in recent_instructors %}
-                    <li class="instructor">
+                {% for i in instructors %}
+                    <li class="instructor {% if i.semester_last_taught != latest_semester %}old{% endif %}">
                         {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
-                        {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty gpa=i.gpa last_taught=course.semester_last_taught %}
-                    </li>
-                {% endfor %}
-                {% for i in old_instructors %}
-                    <li class="instructor old">
-                        {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
-                        {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty gpa=i.gpa %}
+                        {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty gpa=i.gpa last_taught=i.semester_last_taught %}
                     </li>
                 {% endfor %}
             </ul>
