Close #219 Copyright year

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -68,6 +68,8 @@
     }
     return "";
   }
+  // Update copyright year in the sidebar
+  $(".year").text(new Date().getFullYear());
 </script>
 
 <!-- Turbolinks -->
