--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -69,7 +69,7 @@
   <div class="footer text-center small">
     <a href="{% url 'privacy' %}">Privacy</a> |
     <a href="{% url 'terms' %}">Terms</a>
-    <p>theCourseForum <br> &copy; {{ LATEST_SEMESTER.year }} v1.0.0</p>
+    <p>theCourseForum <br> &copy; <span class="year"></span> v1.0.0</p>
     {% if DEBUG %}
     <div class="bg-tcf-blue pb-3">
       <hr class="border-white">
