--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="new-review container-fluid d-flex flex-column text-left">
+<div class="new-review container-fluid d-flex flex-column text-left mx-md-5 mx-sm-4">
 
     <h2 class="mt-2 mb-4">Write a review</h2>
     <div class="row">
@@ -22,8 +22,9 @@
             Which class are you reviewing?</h4>
           <div class="form-group col-sm-3 col-6">
             <label for="subject">Subject</label>
-            <select type="text" class="form-control" id="subject" name="subject" required>
-              <option value="" disabled selected>[Select]</option>
+            <select type="text" class="form-control" required
+                    id="subject" name="subject" onchange=loadCourseData()>
+              <option value="NONE" disabled selected>[Select]</option>
               <!-- {% for s in subjects %}
               <option value={{s}}>{{s}}</option>
               {% endfor %} -->
@@ -31,8 +32,9 @@
           </div>
           <div class="form-group col-sm-3 col-6">
             <label for="courseID">Course ID</label>
-            <select type="text" class="form-control" id="courseID" name="courseID" required>
-              <option value="" disabled selected>[Select]</option>
+            <select type="text" class="form-control" required
+                    id="courseID" name="courseID" onchange=loadInstructorData()>
+              <option value="NONE" disabled selected>[Select]</option>
               <!-- {% for c in courseIDs %}
               <option value={{c}}>{{c}}</option>
               {% endfor %} -->
@@ -40,8 +42,9 @@
           </div>
           <div class="form-group col-sm-6">
             <label for="instructor">Instructor</label>
-            <select type="text" class="form-control" id="instructor" name="instructor" required>
-              <option value="" disabled selected>[Select]</option>
+            <select type="text" class="form-control" required
+                    id="instructor" name="instructor">
+              <option value="NONE" disabled selected>[Select]</option>
               <!-- {% for i in instructors %}
               <option value={{i}}>{{i}}</option>
               {% endfor %} -->
@@ -172,6 +175,15 @@
         <div class="new-review-submit row my-4">
           <button type="submit" class="btn btn-primary mx-auto">Submit Review</button>
         </div>
+
+        <select type="text" class="form-control" id="country" name="country" required>
+          <option value="" disabled selected>[Select]</option>
+          <option value="Germany">Germany</option>
+          <option value="Spain">Spain</option>
+        </select>
+        <select type="text" onchange=loadInstructorData() class="form-control" id="location" name="location" required>
+          <option value="" disabled selected>[Select]</option>
+        </select>
       </form>
     </div>
 </div>
@@ -180,7 +192,69 @@
 {% endblock %}
 
 {% block js %}
-<script>
+<script type="text/javascript">
+  // Executed when DOM is ready
+  jQuery(function($) {
+    // Fetch all subdepartment data from API
+    var endpoint = 'http://localhost:8000/api/subdepartments/'
+    $.getJSON(endpoint, function(data) {
+        // Generate option tags
+        var optionTags = $.map(data, function(subdept){
+            return '<option value="' + subdept.id + '">' + subdept.mnemonic + '</option>'
+        }).join('');
+        // Prepend default option
+        optionTags = '<option value="" disabled selected>[Select]</option>' + optionTags
 
+        // Add option tags to select element in html
+        $('#subject').html(optionTags)
+
+        return this;
+    });
+  });
+
+  function loadCourseData() {
+    var subdeptID = $('#subject').val()
+    console.log(subdeptID);
+
+    // Fetch course data from API, based on selected subdepartment
+    var endpoint = 'http://localhost:8000/api/courses/?subdepartment=' + subdeptID
+    $.getJSON(endpoint, function(data) {
+        console.log(data);
+        // Generate option tags
+        var optionTags = $.map(data.results, function(course){
+            return '<option value="' + course.id + '">' + course.number + '</option>'
+        }).join('');
+        // Prepend default option
+        optionTags = '<option value="" disabled selected>[Select]</option>' + optionTags
+
+        // Add option tags to select element in html
+        $('#courseID').html(optionTags)
+
+        return this;
+    });
+  }
+
+  function loadInstructorData() {
+    var courseID = $('#courseID').val()
+    console.log(courseID);
+
+    // Fetch instructor data from API, based on selected course
+    var endpoint = 'http://localhost:8000/api/instructors/?section__course=' + courseID
+    $.getJSON(endpoint, function(data) {
+        console.log(data);
+        // Generate option tags
+        var optionTags = $.map(data.results, function(instructor){
+            return '<option value="' + instructor.id + '">' + instructor.first_name +
+                   ' ' + instructor.last_name + '</option>'
+        }).join('');
+        // Prepend default option
+        optionTags = '<option value="" disabled selected>[Select]</option>' + optionTags
+
+        // Add option tags to select element in html
+        $('#instructor').html(optionTags)
+
+        return this;
+    });
+  }
 </script>
 {% endblock %}
