Increased API results page size and added courseID filtering

--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -217,12 +217,15 @@
     console.log(subdeptID);
 
     // Fetch course data from API, based on selected subdepartment
-    var endpoint = 'http://localhost:8000/api/courses/?subdepartment=' + subdeptID
+    var pageSizeParam = '&page_size=1000'
+    var endpoint = 'http://localhost:8000/api/courses/?subdepartment=' + subdeptID + pageSizeParam
     $.getJSON(endpoint, function(data) {
         console.log(data);
         // Generate option tags
         var optionTags = $.map(data.results, function(course){
-            return '<option value="' + course.id + '">' + course.number + '</option>'
+            // 4-digit courseIDs only
+            if(course.number > 1000)
+                return '<option value="' + course.id + '">' + course.number + '</option>'
         }).join('');
         // Prepend default option
         optionTags = '<option value="" disabled selected>[Select]</option>' + optionTags
@@ -239,13 +242,14 @@
     console.log(courseID);
 
     // Fetch instructor data from API, based on selected course
-    var endpoint = 'http://localhost:8000/api/instructors/?section__course=' + courseID
+    var pageSizeParam = '&page_size=1000'
+    var endpoint = 'http://localhost:8000/api/instructors/?section__course=' + courseID + pageSizeParam
     $.getJSON(endpoint, function(data) {
         console.log(data);
         // Generate option tags
-        var optionTags = $.map(data.results, function(instructor){
-            return '<option value="' + instructor.id + '">' + instructor.first_name +
-                   ' ' + instructor.last_name + '</option>'
+        var optionTags = $.map(data.results, function(instr){
+            return '<option value="' + instr.id + '">' + instr.first_name +
+                   ' ' + instr.last_name + '</option>'
         }).join('');
         // Prepend default option
         optionTags = '<option value="" disabled selected>[Select]</option>' + optionTags
