Moved functions into jquery selectors

--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -22,22 +22,19 @@
             Which class are you reviewing?</h4>
           <div class="form-group col-sm-3 col-6">
             <label for="subject">Subject</label>
-            <select type="text" class="form-control" required
-                    id="subject" name="subject" onchange=loadCourseData()>
+            <select type="text" class="form-control" required id="subject" name="subject">
               <option value="NONE" disabled selected>[Select]</option>
             </select>
           </div>
           <div class="form-group col-sm-3 col-6">
             <label for="courseID">Course ID</label>
-            <select type="text" class="form-control" required
-                    id="courseID" name="courseID" onchange=loadInstructorData()>
+            <select type="text" class="form-control" required id="courseID" name="courseID">
               <option value="NONE" disabled selected>[Select]</option>
             </select>
           </div>
           <div class="form-group col-sm-6">
             <label for="instructor">Instructor</label>
-            <select type="text" class="form-control" required
-                    id="instructor" name="instructor">
+            <select type="text" class="form-control" required id="instructor" name="instructor">
               <option value="NONE" disabled selected>[Select]</option>
             </select>
           </div>
