Link up review form with ids

--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -40,25 +40,10 @@
           </div>
         </div>
         <div class="form-row mb-3">
-          <div class="form-group col-sm-3 col-6">
+          <div class="form-group col-sm-6">
             <label for="semester">Semester</label>
             <select type="text" class="form-control" id="semester" name="semester" required>
-              <option value="" disabled selected>[Select]</option>
-              <option value="Fall">Fall</option>
-              <option value="January">January</option>
-              <option value="Spring">Spring</option>
-              <option value="Summer">Summer</option>
-            </select>
-          </div>
-          <div class="form-group col-sm-3 col-6">
-            <label for="year">Year</label>
-            <select type="text" class="form-control" id="year" name="year" required>
-              <option value="" disabled selected>[Select]</option>
-              <option value="2016">2016</option>
-              <option value="2017">2017</option>
-              <option value="2018">2018</option>
-              <option value="2019">2019</option>
-              <option value="2020">2020</option>
+              <option value="NONE" disabled selected>[Select]</option>
             </select>
           </div>
         </div>
