--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -46,6 +46,44 @@ body {
     }
 }
 
+/* For buttons */
+.btn.btn-primary,
+.btn.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn.btn-outline-primary:not(:disabled):not(.disabled):active {
+  color: white;
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.btn.btn-outline-primary {
+  color: white;
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.btn.btn-primary:hover,
+.btn.btn-outline-primary:hover {
+  color: white;
+  background-color: #AC451E;
+  border-color: #AC451E;
+}
+
+.btn:not(:disabled):not(.disabled).active.focus,
+.btn:not(:disabled):not(.disabled).active:focus {
+  box-shadow: none;
+}
+
+/* For forms */
+.form-control {
+  background-color: var(--background-color);
+  color: black;
+  border-color: transparent;
+}
+
+.form-row {
+  margin: 0.5rem;
+}
+
 footer {
     position: absolute;
     bottom: 0;
@@ -61,39 +99,4 @@ footer {
 
 footer > .row {
     background-color: #172248;
-}
-
-.btn.btn-primary,
-.btn.btn-outline-primary:not(:disabled):not(.disabled).active,
-.btn.btn-outline-primary:not(:disabled):not(.disabled):active {
-  background-color: #AC451E;
-  border-color: var(--accent-color);
-}
-
-.btn.btn-outline-primary {
-  color: white;
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-}
-
-.btn.btn-primary:hover,
-.btn.btn-outline-primary:hover {
-  color: white;
-  background-color: #d1420d;
-  border-color: #d1420d;
-}
-
-.btn:not(:disabled):not(.disabled).active.focus,
-.btn:not(:disabled):not(.disabled).active:focus {
-  box-shadow: none;
-}
-
-.form-control {
-  background-color: var(--background-color);
-  color: black;
-  border-color: transparent;
-}
-
-.form-row {
-  margin: 0.5rem;
 }
