--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -111,7 +111,7 @@
               </div>
           </div>
           <div class="form-group col-sm-6 px-sm-4">
-              <h4 class="review-form-header p-0 mt-4">
+              <h4 class="review-form-header p-0 my-4">
                 Hours of work/week</h4>
               <div class="row py-3">
                 <label for="hoursReading" class="review-form-label col-8">
