Added required asterisk to required fields

--- a/tcf_website/static/reviews/new_review.css
+++ b/tcf_website/static/reviews/new_review.css
@@ -8,3 +8,8 @@
   color: var(--shadow-color);
   background-color: var(--background-color);
 }
+
+.required-field::after {
+    content: " *";
+    color: red;
+}
