Added course name field that dynamically updates

--- a/tcf_website/static/reviews/new_review.css
+++ b/tcf_website/static/reviews/new_review.css
@@ -9,6 +9,10 @@
   background-color: var(--background-color);
 }
 
+.new-review input:disabled{
+  background-color: var(--background-color);
+}
+
 .required-field::after {
     content: " *";
     color: red;
