--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -33,13 +33,18 @@
             </select>
           </div>
           <div class="form-group col-sm-6">
+            <label for="courseName">Course Name</label>
+            <input type="text" class="form-control" disabled id="courseName" name="courseName">
+            </input>
+          </div>
+        </div>
+        <div class="form-row mb-3">
+          <div class="form-group col-sm-6">
             <label for="instructor" class="required-field">Instructor</label>
             <select type="text" class="form-control" required id="instructor" name="instructor">
               <option value="NONE" disabled selected>Select...</option>
             </select>
           </div>
-        </div>
-        <div class="form-row mb-3">
           <div class="form-group col-sm-6">
             <label for="semester" class="required-field">Semester</label>
             <select type="text" class="form-control" id="semester" name="semester" required>
