Put course ID and name together

--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -20,22 +20,17 @@
         <div class="new-review-course form-row mb-3">
           <h4 class="review-form-header form-group col-12 my-4">
             Which class are you reviewing?</h4>
-          <div class="form-group col-sm-3 col-6">
+          <div class="form-group col-sm-3">
             <label for="subject" class="required-field">Subject</label>
             <select type="text" class="form-control" required id="subject" name="subject">
               <option value="NONE" disabled selected>Select...</option>
             </select>
           </div>
-          <div class="form-group col-sm-3 col-6">
-            <label for="courseID" class="required-field">Course ID</label>
+          <div class="form-group col-sm-9">
+            <label for="courseID" class="required-field">Course</label>
             <select type="text" class="form-control" required id="courseID" name="courseID">
               <option value="NONE" disabled selected>Select...</option>
             </select>
-          </div>
-          <div class="form-group col-sm-6">
-            <label for="courseName">Course Name</label>
-            <input type="text" class="form-control" disabled id="courseName" name="courseName">
-            </input>
           </div>
         </div>
         <div class="form-row mb-3">
@@ -47,7 +42,7 @@
           </div>
           <div class="form-group col-sm-6">
             <label for="semester" class="required-field">Semester</label>
-            <select type="text" class="form-control" id="semester" name="semester" required>
+            <select type="text" class="form-control" required id="semester" name="semester">
               <option value="NONE" disabled selected>Select...</option>
             </select>
           </div>
