--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -14,7 +14,7 @@
     <div class="row">
     <div class="card col">
 
-    <form class="card-body px-md-5" action="{% url 'new_review' %}" method="POST">
+    <form class="card-body mx-lg-5 px-md-5" action="{% url 'new_review' %}" method="POST">
         {% csrf_token %}
         <!-- Class Info -->
         <div class="new-review-course form-row mb-3">
