--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -20,15 +20,15 @@
         <div class="new-review-course form-row mb-3">
           <h4 class="review-form-header form-group col-12 my-4">
             Which class are you reviewing?</h4>
-          <div class="form-group col-sm-3">
+          <div class="form-group col-sm-6">
             <label for="subject" class="required-field">Subject</label>
             <select type="text" class="form-control" required id="subject" name="subject">
               <option value="NONE" disabled selected>Select...</option>
             </select>
           </div>
-          <div class="form-group col-sm-9">
-            <label for="courseID" class="required-field">Course</label>
-            <select type="text" class="form-control" required id="courseID" name="courseID">
+          <div class="form-group col-sm-6">
+            <label for="course" class="required-field">Course</label>
+            <select type="text" class="form-control" required id="course" name="course">
               <option value="NONE" disabled selected>Select...</option>
             </select>
           </div>
