Rename review files to be consistent new_review

--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -64,8 +64,8 @@ body {
 .btn.btn-primary:hover,
 .btn.btn-outline-primary:hover {
   color: white;
-  background-color: #AC451E;
-  border-color: #AC451E;
+  background-color: #AC451E !important;
+  border-color: #AC451E !important;
 }
 
 .btn:not(:disabled):not(.disabled).active.focus,
