--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -155,5 +155,5 @@
 {% endblock %}
 
 {% block js %}
-<script type="text/javascript" src="{% static 'reviews/review_form.js' %}"></script>
+<script type="text/javascript" src="{% static 'reviews/new_review.js' %}"></script>
 {% endblock %}
