--- a/tcf_website/static/reviews/new_review.css
+++ b/tcf_website/static/reviews/new_review.css
@@ -1,4 +1,4 @@
-/* For the Review Form in new.html */
+/* For the Review Form in new_review.html */
 
 .new-review .review-form-header{
   color: var(--accent-color);
