--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -24,7 +24,7 @@
             </div>
 
             <a data-toggle="tooltip"
-               data-placement="top"
+               data-placement="right"
                title="Requires NetBadge Login"
                class="text-tcf-blue font-weight-bold"
                target="_blank"
