--- a/tcf_website/static/reviews/new_review.css
+++ b/tcf_website/static/reviews/new_review.css
@@ -14,14 +14,8 @@
     color: red;
 }
 
-.custom-range::-webkit-slider-thumb {
-  background: var(--accent-color);
-}
-
-.custom-range::-moz-range-thumb {
-  background: var(--accent-color);
-}
-
-.custom-range::-ms-thumb {
-  background: var(--accent-color);
+/* Change tooltip */
+.tooltip-inner {
+    margin-left: 4rem;
+    /* background-color: var(--dark-color) !important; */
 }
