Improved UX on rating slider, and more UI polishing

--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -18,7 +18,7 @@
                         <div class="d-flex">
                             <div>
                             <a class="review-header" href="{% url 'course_instructor' course_id=review.course.pk instructor_id=review.instructor.pk %}">
-                                <p><strong>{{ review.course }}</strong> - {{ review.instructor.full_name }}</p>
+                                <p><strong>{{ review.course }}</strong> — {{ review.instructor.full_name }}</p>
                             </a>
                             </div>
                             <div class="ml-auto">
