--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -65,86 +65,134 @@
 
         <!-- Review ratings for course -->
         <div class="new-review-ratings form-row mb-3">
-          <div class="form-group col-sm-6 pr-sm-5">
+          <div class="form-group col-sm-6 pr-lg-5 pr-sm-4">
               <h2 class="h4 review-form-header col-12 p-0 my-4">
                 Rate the course</h2>
               <div class="mt-3">
-                  <label for="instructorRating" class="required-field">
+                  <label for="instructorRating" class="m-0">
                     <i class="fas fa-user"></i> Instructor
                   </label>
-                  <div class="d-flex">
-                      <span class="mr-2">1</span>
-                      <input type="range" class="custom-range" min="1" max="5" step="1"
-                             value=3 id="instructorRating" name="instructorRating" required>
-                      <span class="ml-2">5</span>
+                  <div class="row">
+                      <div class="col-xl-9 col-8 py-2">
+                        <input type="range" class="custom-range"
+                               min="1" max="5" step="1" value=3
+                               id="instructorRating" name="instructorRating" required>
+                      </div>
+                      <div class="col-xl-3 col-4 pl-lg-2 pl-0 d-inline-flex">
+                        <input type="number" class="form-control text-center"
+                               min="1" max="5" value=3
+                               id="instructorRating2" name="instructorRating2" required>
+                        <span class="ml-2 mt-2">/5</span>
+                      </div>
                   </div>
               </div>
               <div class="mt-3">
-                  <label for="instructorRating" class="required-field">
+                  <label for="enjoyability" class="m-0">
                     <i class="far fa-smile-beam"></i> Enjoyability
                   </label>
-                  <div class="d-flex">
-                      <span class="mr-2">1</span>
-                      <input type="range" class="custom-range" min="1" max="5" step="1"
-                             value=3 id="enjoyability" name="enjoyability" required>
-                      <span class="ml-2">5</span>
+                  <div class="row">
+                      <div class="col-xl-9 col-8 py-2">
+                        <input type="range" class="custom-range"
+                               min="1" max="5" step="1" value=3
+                               id="enjoyability" name="enjoyability" required>
+                      </div>
+                      <div class="col-xl-3 col-4 pl-lg-2 pl-0 d-inline-flex">
+                        <input type="number" class="form-control text-center"
+                               min="1" max="5" value=3
+                               id="enjoyability2" name="enjoyability2" required>
+                        <span class="ml-2 mt-2">/5</span>
+                      </div>
                   </div>
               </div>
               <div class="mt-3">
-                  <label for="difficulty" class="required-field">
+                  <label for="difficulty" class="m-0">
                     <i class="fas fa-dumbbell"></i> Difficulty
                   </label>
-                  <div class="d-flex">
-                      <span class="mr-2">1</span>
-                      <input type="range" class="custom-range" min="1" max="5" step="1"
-                             value=3 id="difficulty" name="difficulty" required>
-                      <span class="ml-2">5</span>
+                  <div class="row">
+                      <div class="col-xl-9 col-8 py-2">
+                        <input type="range" class="custom-range"
+                               min="1" max="5" step="1" value=3
+                               id="difficulty" name="difficulty" required>
+                      </div>
+                      <div class="col-xl-3 col-4 pl-lg-2 pl-0 d-inline-flex">
+                        <input type="number" class="form-control text-center"
+                               min="1" max="5" value=3
+                               id="difficulty2" name="difficulty2" required>
+                        <span class="ml-2 mt-2">/5</span>
+                      </div>
                   </div>
               </div>
               <div class="mt-3">
-                  <label for="recommendability" class="required-field">
+                  <label for="recommendability" class="m-0">
                     <i class="fas fa-thumbs-up"></i> Recommend
                   </label>
-                  <div class="d-flex">
-                      <span class="mr-2">1</span>
-                      <input type="range" class="custom-range" min="1" max="5" step="1"
-                             value=3 id="recommendability" name="recommendability" required>
-                      <span class="ml-2">5</span>
+                  <div class="row">
+                      <div class="col-xl-9 col-8 py-2">
+                        <input type="range" class="custom-range"
+                               min="1" max="5" step="1" value=3
+                               id="recommendability" name="recommendability" required>
+                      </div>
+                      <div class="col-xl-3 col-4 pl-lg-2 pl-0 d-inline-flex">
+                        <input type="number" class="form-control text-center"
+                               min="1" max="5" value=3
+                               id="recommendability2" name="recommendability2" required>
+                        <span class="ml-2 mt-2">/5</span>
+                      </div>
                   </div>
               </div>
           </div>
-          <div class="form-group col-sm-6 px-sm-4">
+          <div class="form-group col-sm-6 pl-lg-5 pl-sm-4">
               <h2 class="h4 review-form-header p-0 my-4">
                 Hours of work/week</h2>
               <div class="row py-3">
-                <label for="hoursReading" class="required-field col-8">
-                  <i class="fas fa-book"></i> Reading
-                </label>
-                <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hoursReading" name="hoursReading" required>
+                <div class="col-8">
+                  <label for="hoursReading">
+                    <i class="fas fa-book"></i> Reading
+                  </label>
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control text-center"
+                         value=0 min="0" max="20"
+                         id="hoursReading" name="hoursReading" required>
+                </div>
               </div>
               <div class="row py-3">
-                <label for="hoursWriting" class="required-field col-8">
-                  <i class="fas fa-pencil-alt"></i> Writing
-                </label>
-                <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hoursWriting" name="hoursWriting" required>
+                <div class="col-8">
+                  <label for="hoursWriting">
+                    <i class="fas fa-pencil-alt"></i> Writing
+                  </label>
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control text-center"
+                         value=0 min="0" max="20"
+                         id="hoursWriting" name="hoursWriting" required>
+                </div>
               </div>
               <div class="row py-3">
-                <label for="hoursGroupwork" class="required-field col-8">
-                  <i class="fas fa-user-friends"></i> Groupwork
-                </label>
-                <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hoursGroupwork" name="hoursGroupwork" required>
+                <div class="col-8">
+                  <label for="hoursGroupwork">
+                    <i class="fas fa-user-friends"></i> Groupwork
+                  </label>
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control text-center"
+                         value=0 min="0" max="20"
+                         id="hoursGroupwork" name="hoursGroupwork" required>
+                </div>
               </div>
               <div class="row py-3">
-                <label for="hoursOther" class="required-field col-8">
-                  <span tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Labs, projects, etc.">
-                    <i class="fas fa-flask"></i> Other
-                  </span>
-                </label>
-                <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hoursOther" name="hoursOther" required>
+                <div class="col-8">
+                  <label for="hoursOther">
+                    <span tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Labs, projects, etc.">
+                      <i class="fas fa-flask"></i> Other
+                    </span>
+                  </label>
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control text-center"
+                         value=0 min="0" max="20"
+                         id="hoursOther" name="hoursOther" required>
+                </div>
               </div>
           </div>
         </div>
