--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -12,25 +12,28 @@
                 </a>
             </div>
             <div class="col-xs-12 col-md-10 col-lg-11">
-                <div class="d-flex flex-row align-items-center">
-                    <div>
-                        {% if profile %}
-                        <div class="d-flex">
-                            <div>
-                            <a class="review-header" href="{% url 'course_instructor' course_id=review.course.pk instructor_id=review.instructor.pk %}">
-                                <p><strong>{{ review.course }}</strong> — {{ review.instructor.full_name }}</p>
-                            </a>
-                            </div>
-                            <div class="ml-auto">
-                            <!-- Edit functionality is TBD -->
-                            <!-- <a class="review-edit btn btn-sm btn-primary" href="#">
-                                <i class="fas fa-pencil-alt"></i> Edit
-                            </a> -->
-                            </div>
+                <div class="">
+                    {% if profile %}
+                    <div class="d-flex">
+                        <div class="review-header">
+                          <a href="{% url 'course_instructor' course_id=review.course.pk instructor_id=review.instructor.pk %}">
+                              <p><strong>{{ review.course }}</strong> — {{ review.instructor.full_name }}</p>
+                          </a>
                         </div>
-                        {% endif %}
-                        <p class="card-text" style="white-space: pre-line;">{{ review.text }}</p>
+                        <div class="review-actions ml-auto">
+                          <!-- Edit functionality is TBD -->
+                          <!-- <a class="review-edit btn btn-sm btn-primary" href="#">
+                              <i class="fas fa-pencil-alt"></i> Edit
+                          </a> -->
+                          <button class="review-delete btn btn-sm btn-outline-danger" type="button"
+                                  data-toggle="modal" data-target="#deleteReviewModal{{review.id}}">
+                            <i class="fa fa-trash-o"></i> Delete
+                          </button>
+                          {% include "reviews/delete_confirm_modal.html" with review_id=review.id %}
+                        </div>
                     </div>
+                    {% endif %}
+                    <p class="card-text" style="white-space: pre-line;">{{ review.text }}</p>
                 </div>
 
                 <div class="d-flex justify-content-between align-items-end flex-wrap">
