--- a/tcf_website/templates/reviews/review_stats.html
+++ b/tcf_website/templates/reviews/review_stats.html
@@ -1,15 +1,15 @@
 <div class="large-stats-container container-lg">
     <div class="d-flex">
         <div class="col-xs-4 large-stats">
-            <h3>Total Reviews Written</h3>
+            <h3>Total Written</h3>
             <h1 class="large-stats-number">{{ total_reviews_written }}</h1>
         </div>
         <div class="col-xs-4 large-stats">
-            <h3>Total Review Upvotes</h3>
+            <h3>Total Upvotes Received</h3>
             <h1 class="large-stats-number">{{ total_review_upvotes }}</h1>
         </div>
         <div class="col-xs-4 large-stats">
-            <h3>Average Review Rating</h3>
+            <h3>Average Rating</h3>
             <h1 class="large-stats-number">{{ average_review_rating }}</h1>
         </div>
     </div>
